<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">
<ImageView
    android:layout_width="match_parent"
    android:layout_height="218dp"
    android:scaleType="centerCrop"
    android:src="@drawable/sprinkler"/>

    <TextView
        android:id="@+id/detail_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:paddingBottom="16dp"
        android:padding="16dp"/>

    <TextView
        android:id="@+id/detail_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:padding="16dp"/>



<!--    <Button-->
<!--        android:id="@+id/articlebackbtn"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="16dp"-->
<!--        android:text="Back" />-->

    <!-- Footer -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="?android:attr/windowBackground"
        android:backgroundTint="#124B3D"
        android:orientation="horizontal"
        android:paddingVertical="8dp"
        android:weightSum="4">

        <ImageButton
            android:id="@+id/homeButton"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/home"
            android:scaleType="centerInside"
            android:src="@drawable/ic_home" />

        <ImageButton
            android:id="@+id/greenhousesButton"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/greenhouses"
            android:scaleType="centerInside"
            android:src="@drawable/ic_greenhouse" />

        <ImageButton
            android:id="@+id/irrigationButton"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/irrigation"
            android:scaleType="centerInside"
            android:src="@drawable/ic_irrigation" />

        <ImageButton
            android:id="@+id/logoutButton"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/logout"
            android:scaleType="centerInside"
            android:src="@drawable/ic_logout" />
    </LinearLayout>

</LinearLayout>
