<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controlirrigation">

    <Button
        android:id="@+id/irrigationOnButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Turn Irrigation On"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/irrigationOffButton"
        app:layout_constraintVertical_chainStyle="packed"/>

    <Button
        android:id="@+id/irrigationOffButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Turn Irrigation Off"
        app:layout_constraintTop_toBottomOf="@id/irrigationOnButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_chainStyle="packed"/>
    <!-- Footer -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="?android:attr/windowBackground"
        android:backgroundTint="#124B3D"
        android:orientation="horizontal"
        android:paddingVertical="8dp"
        android:weightSum="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/irrigationOffButton"
        app:layout_constraintVertical_bias="1.0">

        <ImageButton
            android:id="@+id/homeButton"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/home"
            android:scaleType="centerInside"
            android:src="@drawable/ic_home" />

        <ImageButton
            android:id="@+id/greenhousesButton"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/greenhouses"
            android:scaleType="centerInside"
            android:src="@drawable/ic_greenhouse" />

        <ImageButton
            android:id="@+id/irrigationButton"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/irrigation"
            android:scaleType="centerInside"
            android:src="@drawable/ic_irrigation" />

        <ImageButton
            android:id="@+id/logoutButton"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/logout"
            android:scaleType="centerInside"
            android:src="@drawable/ic_logout" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
