<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:color/white"
        tools:context=".Dashboard">

        <!-- Header Section -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#124B3D"
            android:padding="16dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/app_logo"
                android:src="@drawable/farmflow" />

        </LinearLayout>

        <!-- Main Content -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="16dp">

            <!-- Welcome Message -->
            <TextView
                android:id="@+id/welcomeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/welcome"
                android:textColor="@android:color/black"
                android:textSize="26sp"
                android:textStyle="bold" />

            <!-- Moisture -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="130dp"
                android:text="Soil Moisture"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                android:layout_marginTop="8dp"
                android:padding="16dp">

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:columnCount="2"
                    android:rowCount="1"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/moisture"
                        android:layout_width="134dp"
                        android:layout_height="80dp"
                        android:contentDescription="@string/add_greenhouse"
                        android:gravity="start"
                        android:src="@drawable/water" />

                    <TextView
                        android:id="@+id/MoistureVal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="8dp"
                        android:textColor="@android:color/black"
                        android:textSize="50sp"
                        android:textStyle="bold" />
                </GridLayout>
            </androidx.cardview.widget.CardView>

            <!-- Temperature -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Temperature"
                android:layout_marginLeft="130dp"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                android:layout_marginTop="8dp"
                android:padding="16dp">

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:columnCount="2"
                    android:rowCount="1"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/Temperature"
                        android:layout_width="134dp"
                        android:layout_height="80dp"
                        android:contentDescription="@string/add_greenhouse"
                        android:gravity="start"
                        android:src="@drawable/celsius" />

                    <TextView
                        android:id="@+id/TemperatureVal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="8dp"
                        android:textColor="@android:color/black"
                        android:textSize="50sp"
                        android:textStyle="bold" />
                </GridLayout>
            </androidx.cardview.widget.CardView>

            <!-- Humidity -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Humidity"
                android:layout_marginLeft="130dp"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                android:layout_marginTop="8dp"
                android:padding="16dp">

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:columnCount="2"
                    android:rowCount="1"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/Humidity"
                        android:layout_width="149dp"
                        android:layout_height="80dp"
                        android:contentDescription="@string/add_greenhouse"
                        android:gravity="start"
                        android:src="@drawable/humidity" />

                    <TextView
                        android:id="@+id/HumidityVal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="8dp"
                        android:textColor="@android:color/black"
                        android:textSize="50sp"
                        android:textStyle="bold" />
                </GridLayout>
            </androidx.cardview.widget.CardView>

            <!-- Pump Switch -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="16dp">

                <Switch
                    android:id="@+id/actuatorSwitch"
                    android:layout_width="264dp"
                    android:layout_height="81dp"
                    android:text="Turn the water pump on or off using the switch."
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
